Исправление поиска начала метода при наличии аннотаций